--- a/Desktop/Practica/вёрстка/personal-folio/index.html
+++ b/Desktop/Practica/вёрстка/personal-folio/index.html
@@ -46,7 +46,7 @@
                 <h1 class="title">Chepushila and I’m <span>Web Developer</span></h1>
                 <div class="text">
                     <p>It isrefrtg a long established fact that a reader will
-                     be distracted by the readable content of a page when 
+                     be distracted by the readabless content of a page when 
                      looking at its layout. The point of using Lorem Ipsum is 
                      that it has a more-or-less normal distribution of letters, 
                      as opposed to using ‘Content here, content here’, making it 
