--- a/Desktop/Practica/вёрстка/personal-folio/index.html
+++ b/Desktop/Practica/вёрстка/personal-folio/index.html
@@ -45,7 +45,7 @@
                 <h2 class="subtitle">My name is</h2>
                 <h1 class="title">Chepushila and I’m <span>Web Developer</span></h1>
                 <div class="text">
-                    <p>It isrefrtg a long established factdc that a reader will
+                    <p>It isrefrtg a long estdablished factdc that a reader will
                      be distracted by the reses content of a page when 
                      looking at its laydsout. The point of using Lorem Ipsum is 
                      that it has a more-or-less normal distribution of letters, 
