--- a/Desktop/Practica/вёрстка/personal-folio/index.html
+++ b/Desktop/Practica/вёрстка/personal-folio/index.html
@@ -47,7 +47,7 @@
                 <div class="text">
                     <p>It isrefrtg a long estdablished factdc that a reader will
                      be distracted by the resess content of a page when 
-                     looking at its laydsout. The point of using Lorem Ipsum is 
+                     looking at its laydsouts. The point of using Lorem Ipsum is 
                      that it has a more-or-less normal distribution of letters, 
                      as opposed to using ‘Content here, content here’, making it 
                      look like 
