--- a/Desktop/Practica/вёрстка/personal-folio/about.html
+++ b/Desktop/Practica/вёрстка/personal-folio/about.html
@@ -51,7 +51,7 @@
                          as their default model text, and a search for lorem ipsum will uncover
                           many web sites still in their infancy. Various versions have evolved
                            over the years, sometimes by accident, sometimes on purpose
-                            (injected humour and the like).
+                            (injected humour and the like). Alos fvufn rfrjv
                     </p>
                 </div>
             </div>
@@ -70,7 +70,7 @@
                    <a class="contacts-link" href="tel:+37373877636">
                        <img class="contact-icon" src=".//img/phone-receiver.svg" alt="phone">+37373877636</a>
                 </div>
-            </div>
+            </div> <!--container-->
              </footer>
 
 
