--- a/Desktop/Practica/вёрстка/personal-folio/about.html
+++ b/Desktop/Practica/вёрстка/personal-folio/about.html
@@ -53,8 +53,8 @@
                            over the years, sometimes by accident, sometimes on purpose
                             (injected humour and the like). Alos fvufn rfrjv
                     </p>
-                </div>
-            </div>
+                </div> 
+            </div> <!--content-->
         </main>
         
 
@@ -69,7 +69,7 @@
                         <img class="contact-icon" src=".//img/mail-black-envelope-symbol.svg" alt="mail">info@mail.com</a>
                    <a class="contacts-link" href="tel:+37373877636">
                        <img class="contact-icon" src=".//img/phone-receiver.svg" alt="phone">+37373877636</a>
-                </div>
+                </div> <!--contacts-->
             </div> <!--container-->
              </footer>
 
