--- a/Desktop/Practica/вёрстка/personal-folio/about.html
+++ b/Desktop/Practica/вёрстка/personal-folio/about.html
@@ -21,10 +21,10 @@
                     <div class="header-inner">
                     <div class="header-brand">
                         WEBDEVELOPER
-                    </div>
+                    </div> <!--header-brand-->
                     <div class="header-logo">
                         <img src="../personal-folio/img/code.svg" alt="logo">
-                    </div>
+                    </div> <!--header-logo-->
                     <nav class="header-nav">
                         <a class="header-nav-link " href="index.html">Home</a>
                         <a class="header-nav-link active" href="about.html">About me</a>
@@ -53,7 +53,7 @@
                            over the years, sometimes by accident, sometimes on purpose
                             (injected humour and the like). Alos fvufn rfrjv
                     </p>
-                </div> 
+                </div> <!--text-->
             </div> <!--content-->
         </main>
         
