--- a/Desktop/Practica/вёрстка/personal-folio/contacts.html
+++ b/Desktop/Practica/вёрстка/personal-folio/contacts.html
@@ -78,7 +78,7 @@
                    <a class="contacts-link tel1" href="tel:+37373877636">
                        <img class="contact-icon" src=".//img/phone-receiver.svg" alt="phone">+37373877636</a>
                 </div>
-            </div>
+            </div> <!--container-->
              </footer>
 
 
