--- a/Desktop/Practica/вёрстка/personal-folio/contacts.html
+++ b/Desktop/Practica/вёрстка/personal-folio/contacts.html
@@ -77,7 +77,7 @@
                         <img class="contact-icon" src=".//img/mail-black-envelope-symbol.svg" alt="mail">info@mail.com</a>
                    <a class="contacts-link tel1" href="tel:+37373877636">
                        <img class="contact-icon" src=".//img/phone-receiver.svg" alt="phone">+37373877636</a>
-                </div>
+                </div> <!--contacts-->
             </div> <!--container-->
              </footer>
 
