--- a/Desktop/Practica/вёрстка/personal-folio/index.html
+++ b/Desktop/Practica/вёрстка/personal-folio/index.html
@@ -42,7 +42,7 @@
             <main class="container indexmain">
                 <div class="content">
                 <h2 class="subtitle">My name is</h2>
-                <h1 class="title">Chepushila and I’m <span>Web Developer</span></h1>
+                <h1 class="title">Grosul Igor and I’m <span>Web Developer</span></h1>
                 <div class="text">
                     <p>It isrefrtg a long estdablished factdc that a reader will
                         be distracted by the resesss content of a page when 
