--- a/Desktop/Practica/вёрстка/personal-folio/about.html
+++ b/Desktop/Practica/вёрстка/personal-folio/about.html
@@ -39,7 +39,7 @@
             <!--Main content-->
             <main class="container aboutmain">
                             <div class="content">
-                <h1 class="title popa">Popa <span>Pupa</span></h1>
+                <h1 class="title popa">Grosul <span>Igor</span></h1>
                 <div class="text">
                     <p>It is a long established fact that a reader will be distracted 
                         by the readable content of a page when looking at its layout. 
