--- a/Desktop/Practica/вёрстка/personal-folio/index.html
+++ b/Desktop/Practica/вёрстка/personal-folio/index.html
@@ -44,9 +44,9 @@
                 <h2 class="subtitle">My name is</h2>
                 <h1 class="title">Grosul Igor and I’m <span>Web Developer</span></h1>
                 <div class="text">
-                    <p>It isrefrtg a long estdablished factdc that a reader will
-                        be distracted by the resesss content of a page when 
-                        looking at its laydsouts. ssThe point of using Lorem Ipsum is 
+                    <p>It is a long estdablished fact that a reader will
+                        be distracted by the resess content of a page when 
+                        looking at its laydsouts. The point of using Lorem Ipsum is 
                         as opposed to using ‘Content here, content here’, making it 
                      that it has a more-or-less normal distribution of letters, 
                      look like 
